@@ -1,25 +1,10 @@
+// SongPlayer.java - Fall 2023 - A groovy, animated Jukebox that plays MP3 files.
+// CS709 Hunter Fall 2023 - Final Project
+// ----------------------------------------------------------------------------------------
 
-import javafx.animation.FillTransition;
-import javafx.animation.ParallelTransition;
-import javafx.animation.RotateTransition;
-import javafx.animation.ScaleTransition;
-import javafx.animation.Timeline;
-import javafx.animation.TranslateTransition;
-import javafx.application.Application;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
-import javafx.geometry.Insets;
-import javafx.scene.Group;
-import javafx.scene.Scene;
-import javafx.scene.control.Button;
-import javafx.scene.control.Label;
-import javafx.scene.paint.Color;
-import javafx.scene.text.Font;
-import javafx.scene.text.FontWeight;
-import javafx.scene.text.Text;
-import javafx.stage.Stage;
-import javafx.util.Duration;
-
+// To compile and run:
+// javac --module-path /home/plod/Documents/CS-709/JavaFX/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml,javafx.media MyPlayer.java
+// java --module-path /home/plod/Documents/CS-709/JavaFX/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml,javafx.media MyPlayer.java *.mp3
 
 // Imports relevant to the graphical elements.
 import javafx.application.Application;
@@ -55,9 +40,15 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
+import javafx.geometry.Insets;
+import javafx.scene.text.FontWeight;
+import javafx.util.Duration;
 
 import javafx.animation.FillTransition;
-import javafx.util.Duration;
+
+
 
 // Imports relevant to playing MP3 music.
 import javafx.scene.media.*;
@@ -65,11 +56,8 @@ import javafx.scene.Node;
 
 public class App extends Application {
 
-    ////////////////////////////////////
-    //SongPlayer Variables and Methods//
-    ///////////////////////////////////
-
-    String mp3;
+	// Media player code for the music.
+	String mp3;
 	Media med;
 	MediaPlayer mdp;
 	MediaView mdv;
@@ -84,33 +72,7 @@ public class App extends Application {
 	Rectangle r, r2, r3, r4;
 
 
-    
-    public void playSong() {
-        mdp.play();
-        textField.setText(song.getTitle() + ": by " + song.getArtist());
-    }
-
-
-    public void stopSong() {
-        mdp.stop();
-    }
-    
-    public void pauseSong() {
-        mdp.pause();
-    }
-
-
-
-    /////////////////////////////////
-    
-
-
-
-
-
-    //Payment system variables 
-     
-
+	//Payment system variables 
     private Label fundsLabel;
     private Label creditFundsLabel;
     private String creditCardAmount = "";
@@ -131,38 +93,74 @@ public class App extends Application {
         creditFundsLabel.setText("Credit Card Amount: " + creditCardAmount);
     }
 
-    
+	private void handleCoinButton(int amount) {
+		coinPayments.addFunds(amount);
+		displayUpdatedTotal();
+	}
+
+	private Button createButton(String text, double layoutX, double layoutY) {
+        Button button = new Button(text);
+        button.setLayoutX(layoutX);
+        button.setLayoutY(layoutY);
+        return button;
+    }
+
+	private void handleReturnFundsButton() {
+			int totalReturnAmount = coinPayments.currencyBox.getTotalCoinsAmount()
+					+ creditPayments.creditCurrencyBox.getCreditAmountInt();
+			fundsLabel.setText("Funds returned: " + totalReturnAmount + "¢" + "\n" + coinPayments.returnFunds() + "\n"
+					+ "Credit Card Amount: " + creditPayments.returnFunds() + "¢");
+	
+			creditPayments.creditCurrencyBox.resetCreditAmountInt();
+			coinPayments.currencyBox.resetAllCoins();
+		}
+
+	
 
 
+	@Override
+	public void start(Stage stage) throws FileNotFoundException {
+		// Builds the base window for the GUI (graphical user interface).
+		Group root = new Group();
+		Scene scene = new Scene(root, 800, 500, Color.BLACK);
 
+		// read in the song details file from the command line
+		Parameters params = getParameters();
+		List<String> argsList = params.getRaw();
+		String[] argsArray = argsList.toArray(new String[argsList.size()]);
 
+		// print out the song details list file name
+		// System.out.println(argsArray);
 
+		SongList songList = new SongList(argsArray);
+		
+		System.out.println(songList.toString());
+		// songs = songList.getSongs();
 
-    @Override
-    public void start(Stage primaryStage) {
-        primaryStage.setTitle("Juke Box");
+		////////////////////////////////////////////////////////////////////////////////
+		////////////////////////////////////////////////////////////////////////////////
+		////////////////////////////////////////////////////////////////////////////////
+		// get the first song from songs ArrayList
+		// song = songs.get(songToPlay); //
 
-        Group root = new Group();
+		// mp3 = "file:" + song.getFileName(); //
+		// System.out.println(mp3);
+		// // textField.setText(song.getTitle() + ": by " + song.getArtist());
 
-        // set up for the title
-        Text scenetitle = new Text("JukeBox");
-        scenetitle.setFont(Font.font("Tahoma", FontWeight.BOLD, 40));
-        scenetitle.setLayoutX(200);
-        scenetitle.setLayoutY(50);
-        root.getChildren().add(scenetitle);
+		// // Create the media player and media view.
+		// med = new Media(mp3);
+		// mdp = new MediaPlayer(med);
+		// mdv = new MediaView(mdp);
+		// root.getChildren().add(mdv);
+		// mdp.play();
 
-
-        
-        ///////////////////////////////////
-        //Music Player buttons and labels//
-        ///////////////////////////////////
-
-        //play button
-        Button playButton = new Button("Play");
+		////////////////////////////////////////////////////////////////////////////////
+		// Create the button to play the song.
+		Button playButton = new Button("Play");
 		playButton.setLayoutX(50);
 		playButton.setLayoutY(100);
 		playButton.setOnAction(e -> {
-			//playSong();
+			playSong();
 		});
 		root.getChildren().add(playButton);
 
@@ -171,7 +169,7 @@ public class App extends Application {
 		pauseButton.setLayoutX(50);
 		pauseButton.setLayoutY(130);
 		pauseButton.setOnAction(e -> {
-			//pauseSong();
+			pauseSong();
 		});
 		root.getChildren().add(pauseButton);
 
@@ -180,7 +178,7 @@ public class App extends Application {
 		stopButton.setLayoutX(50);
 		stopButton.setLayoutY(160);
 		stopButton.setOnAction(e -> {
-			//stopSong();
+			stopSong();
 		});
 		root.getChildren().add(stopButton);
 
@@ -206,14 +204,14 @@ public class App extends Application {
 		});
 		root.getChildren().add(nextButton);
 
-		
+		////////////////////////////////////////////////////////////////////////////////
 		// SORT BUTTONS
 		// Create the button to sort by title.
 		Button titleButton = new Button("Sort by Title");
 		titleButton.setLayoutX(50);
 		titleButton.setLayoutY(220);
 		titleButton.setOnAction(e -> {
-			//sortSongsBy("title");
+			sortSongsBy("title");
 			System.out.println(songs);
 		});
 		root.getChildren().add(titleButton);
@@ -223,17 +221,17 @@ public class App extends Application {
 		artistButton.setLayoutX(50);
 		artistButton.setLayoutY(250);
 		artistButton.setOnAction(e -> {
-			//sortSongsBy("artist");
+			sortSongsBy("artist");
 			System.out.println(songs);
 		});
 		root.getChildren().add(artistButton);
-        
+
 		// Create the button to sort by genre.
 		Button genreButton = new Button("Sort by Genre");
 		genreButton.setLayoutX(50);
 		genreButton.setLayoutY(280);
 		genreButton.setOnAction(e -> {
-			//sortSongsBy("genre");
+			sortSongsBy("genre");
 			System.out.println(songs);
 		});
 		root.getChildren().add(genreButton);
@@ -243,21 +241,17 @@ public class App extends Application {
 		durationButton.setLayoutX(50);
 		durationButton.setLayoutY(310);
 		durationButton.setOnAction(e -> {
-			//sortSongsBy("duration");
+			sortSongsBy("duration");
 			System.out.println(songs);
 		});
 		root.getChildren().add(durationButton);
 
-        
 
-
-        
-
-        /////////////////////////////////////////
+		/////////////////////////////////////////
         //labels and buttons for payment system//
         /////////////////////////////////////////
 
-        // funds label
+		// funds label
         fundsLabel = new Label();
         creditFundsLabel = new Label();
         fundsLabel.setLayoutX(50);
@@ -266,27 +260,27 @@ public class App extends Application {
         creditFundsLabel.setLayoutY(600);
         root.getChildren().addAll(fundsLabel, creditFundsLabel);
 
-       
-        // coinPad Buttons
-        Button pennyButton = createButton("1¢", 60, 445);
-        pennyButton.setOnAction(e -> handleCoinButton(1));
-
-        Button nickelButton = createButton("5¢", 90, 445);
-        nickelButton.setOnAction(e -> handleCoinButton(5));
-
-        Button dimeButton = createButton("10¢", 120, 445);
-        dimeButton.setOnAction(e -> handleCoinButton(10));
-
-        Button quarterButton = createButton("25¢", 155, 445);
-        quarterButton.setOnAction(e -> handleCoinButton(25));
-
-        Button halfDollarButton = createButton("50¢", 190, 445);
-        halfDollarButton.setOnAction(e -> handleCoinButton(50));
-
-        Button goldenDollarButton = createButton("$1", 225, 445);
-        goldenDollarButton.setOnAction(e -> handleCoinButton(100));
-
-        // return funds button
+		 // coinPad Buttons
+		 Button pennyButton = createButton("1¢", 60, 445);
+		 pennyButton.setOnAction(e -> handleCoinButton(1));
+ 
+		 Button nickelButton = createButton("5¢", 90, 445);
+		 nickelButton.setOnAction(e -> handleCoinButton(5));
+ 
+		 Button dimeButton = createButton("10¢", 120, 445);
+		 dimeButton.setOnAction(e -> handleCoinButton(10));
+ 
+		 Button quarterButton = createButton("25¢", 155, 445);
+		 quarterButton.setOnAction(e -> handleCoinButton(25));
+ 
+		 Button halfDollarButton = createButton("50¢", 190, 445);
+		 halfDollarButton.setOnAction(e -> handleCoinButton(50));
+ 
+		 Button goldenDollarButton = createButton("$1", 225, 445);
+		 goldenDollarButton.setOnAction(e -> handleCoinButton(100));
+		
+		
+		// return funds button
         Button returnFundsButton = createButton("Return Funds", 150, 500);
         returnFundsButton.setOnAction(e -> handleReturnFundsButton());
 
@@ -321,67 +315,85 @@ public class App extends Application {
         Button zeroButton = createButton("0", 430, 535);
         zeroButton.setOnAction(e -> ccAmountAdded(0));
 
-        Button clearButton = createButton("C", 460, 535);
+
+		Button clearButton = createButton("C", 460, 535);
         clearButton.setOnAction(e -> {
             creditCardAmount = "";
             creditFundsLabel.setText("Credit Card Amount: " + creditCardAmount);
         });
 
-        Button swipeCreditCardButton = createButton("Swipe Credit Card", 385, 565);
-        swipeCreditCardButton.setOnAction(e -> {
-            creditPayments.addFunds(Integer.parseInt(creditCardAmount));
-            creditFundsLabel.setText("Credit Card Amount: " + creditCardAmount + "¢ added to funds");
-            creditCardAmount = "";
-            displayUpdatedTotal();
-        });
 
-        root.getChildren().addAll(pennyButton, nickelButton, dimeButton, quarterButton, halfDollarButton,
-                goldenDollarButton, returnFundsButton, oneButton, twoButton, threeButton, fourButton, fiveButton,
-                sixButton, sevenButton, eightButton, nineButton, zeroButton, clearButton, swipeCreditCardButton);
-
-        Scene scene = new Scene(root, 800, 800);
-        primaryStage.setScene(scene);
-        primaryStage.show();
-    }
-
-    /////////////////////////////////
-    
-    private Button createButton(String text, double layoutX, double layoutY) {
-        Button button = new Button(text);
-        button.setLayoutX(layoutX);
-        button.setLayoutY(layoutY);
-        return button;
-    }
-
-    private void handleCoinButton(int amount) {
-        coinPayments.addFunds(amount);
-        displayUpdatedTotal();
-    }
-
-    private void handleReturnFundsButton() {
-        int totalReturnAmount = coinPayments.currencyBox.getTotalCoinsAmount()
-                + creditPayments.creditCurrencyBox.getCreditAmountInt();
-        fundsLabel.setText("Funds returned: " + totalReturnAmount + "¢" + "\n" + coinPayments.returnFunds() + "\n"
-                + "Credit Card Amount: " + creditPayments.returnFunds() + "¢");
-
-        creditPayments.creditCurrencyBox.resetCreditAmountInt();
-        coinPayments.currencyBox.resetAllCoins();
+		
 
 
+		//////////////////////////////////////////////////////////////////////////////////
 
-    // Builds the initial rectangle that will eventually be animated.
-		// r = new Rectangle(125, 125, 150, 150);
-		// r.setFill(Color.PURPLE);
-		// r2 = new Rectangle(80, 350, 100, 100);
-		// r2.setFill(Color.RED);
-		// r3 = new Rectangle(550, 80, 150, 150);
-		// r3.setFill(Color.YELLOW);
-		// r4 = new Rectangle(575, 105, 100, 100);
-		// r4.setFill(Color.ORCHID);
-		// root.getChildren().addAll(r, r2, r3, r4);
-        
-    
-    // Add the animation effects
+		////////////////////////////////////////////////////////////////////////////////
+		// Create the label for the song title.
+		Text text = new Text(50, 50, "");
+		text.setFont(Font.font("Cambria", 28));
+		text.setStyle("-fx-font-weight: bold");
+		textField = new TextField();
+		textField.setText("Song Title");
+		text.textProperty().bind(textField.textProperty());
+
+		////////////////////////////////////////////////////////////////////////////////
+		// Neon effect
+		Blend blend = new Blend();
+		blend.setMode(BlendMode.MULTIPLY);
+
+		DropShadow ds = new DropShadow();
+		ds.setColor(Color.rgb(254, 235, 66, 0.3));
+		ds.setOffsetX(5);
+		ds.setOffsetY(5);
+		ds.setRadius(5);
+		ds.setSpread(0.2);
+
+		blend.setBottomInput(ds);
+
+		DropShadow ds1 = new DropShadow();
+		ds1.setColor(Color.web("#f13a00"));
+		ds1.setRadius(20);
+		ds1.setSpread(0.2);
+
+		Blend blend2 = new Blend();
+		blend2.setMode(BlendMode.MULTIPLY);
+
+		InnerShadow is = new InnerShadow();
+		is.setColor(Color.web("#feeb42"));
+		is.setRadius(9);
+		is.setChoke(0.8);
+		blend2.setBottomInput(is);
+
+		InnerShadow is1 = new InnerShadow();
+		is1.setColor(Color.web("#f13a00"));
+		is1.setRadius(5);
+		is1.setChoke(0.4);
+		blend2.setTopInput(is1);
+
+		Blend blend1 = new Blend();
+		blend1.setMode(BlendMode.MULTIPLY);
+		blend1.setBottomInput(ds1);
+		blend1.setTopInput(blend2);
+
+		blend.setTopInput(blend1);
+		text.setEffect(blend);
+		root.getChildren().add(text);
+
+		////////////////////////////////////////////////////////////////////////////////
+
+		// Builds the initial rectangle that will eventually be animated.
+		r = new Rectangle(125, 125, 150, 150);
+		r.setFill(Color.PURPLE);
+		r2 = new Rectangle(80, 350, 100, 100);
+		r2.setFill(Color.RED);
+		r3 = new Rectangle(550, 80, 150, 150);
+		r3.setFill(Color.YELLOW);
+		r4 = new Rectangle(575, 105, 100, 100);
+		r4.setFill(Color.ORCHID);
+		root.getChildren().addAll(r, r2, r3, r4);
+
+		// Add the animation effects
 		TranslateTransition translate = new TranslateTransition(Duration.millis(1750));
 		translate.setToX(590);
 		translate.setToY(290);
@@ -426,12 +438,64 @@ public class App extends Application {
 		transition2.setCycleCount(Timeline.INDEFINITE);
 		transition2.setAutoReverse(true);
 		transition2.play();
-    
-    
-    
-    }
 
-    public static void main(String[] args) {
-        launch(args);
-    }
+		// Launch the application window
+		stage.setTitle("Music Player Demo");
+		stage.setScene(scene);
+		stage.show();
+
+	}
+
+	public void playSong() {
+		mdp.play();
+		textField.setText(song.getTitle() + ": by " + song.getArtist());
+	}
+
+	public void stopSong() {
+		mdp.stop();
+	}
+
+	public void pauseSong() {
+		mdp.pause();
+	}
+
+	public void nextSong() {
+		// mdp.stop();
+		// songToPlay++;
+
+		// song = songs.get(songToPlay); //
+
+		// mp3 = "file:" + song.getPath();
+		// System.out.println(mp3);
+		// med = new Media(mp3);
+		// mdp = new MediaPlayer(med);
+		// mdv = new MediaView(mdp);
+		// root.getChildren().add(mdv);
+		// mdp.play();
+		// textField.setText(song.getTitle() + ": by " + song.getArtist());
+	}
+
+	public void sortSongsBy(String sortBy) {
+
+		switch (sortBy) {
+			case "title":
+				Collections.sort(songs, Comparator.comparing(Song::getTitle));
+				break;
+			case "artist":
+				Collections.sort(songs, Comparator.comparing(Song::getArtist));
+				break;
+			case "genre":
+				Collections.sort(songs, Comparator.comparing(Song::getGenre));
+				break;
+			case "duration":
+				Collections.sort(songs, Comparator.comparing(Song::getDuration));
+				break;
+			default:
+				break;
+		}
+	}
+
+	public static void main(String[] args) {
+		launch(args);
+	}
 }
